# vhrdcam

./: .gitignore  .gitmodules  Background.qml  BasicCamera.qml  CMakeLists.txt  CoordinatePlane.qml  Line.qml  OrthoCamera.qml  README.md  Scene.qml  ThickLine.qml  TrefoilKnot.qml  UI.qml  WaveForwardRenderer.qml  d2entityrenderer.cpp  d2entityrenderer.h  dxfparserprocess.cpp  dxfparserprocess.h  entityplayground.cpp  entityplayground.h  geometryplayground.cpp  geometryplayground.h  main.cpp  main.qml  main3donly.qml  qml.qrc  thickline.cpp  thickline.h  thicklinegeometry.cpp  thicklinegeometry.h  thicklinemesh.cpp  thicklinemesh.h  thinlinegeometry.cpp  thinlinegeometry.h  thinlinemesh.cpp  thinlinemesh.h  units.cpp  units.h
shaders/: thickline.frag  thickline.geom  thickline.vert  thinline.frag  thinline.geom  thinline.vert
vhapi/: d2entityrendererentitiesioportvhapi.cpp  d2entityrendererentitiesioportvhapi.h  d2entityrenderervhapi.cpp  d2entityrenderervhapi.h  dxfio.cpp  dxfio.h  dxfioentitiestxport.cpp  dxfioentitiestxport.h  entityplaygroundvhapi.cpp  entityplaygroundvhapi.h  rxport.cpp  rxport.h  txport.cpp  txport.h  zeromqinterface.cpp  zeromqinterface.h  zeromqinterfaceworker.cpp  zeromqinterfaceworker.h
vhapi/2dentities/: 2dentities.yaml  arcentity.cpp  arcentity.h  baseentity.hpp  bsplineentity.cpp  bsplineentity.h  curveentity.cpp  curveentity.h  groupentity.cpp  groupentity.h  lineentity.cpp  lineentity.hpp  markerentity.cpp  markerentity.hpp  point4fentity.cpp  point4fentity.h  pointentity.cpp  pointentity.hpp  polylineentity.cpp  polylineentity.h  shapeentity.cpp  shapeentity.h
